# kelab-lab1

./: .dockerignore  .env  .gitignore  Makefile  README.md  app.yaml  definitions.py  docker-compose.yml  logger.py  pyproject.toml
.github/workflows/: lab3-toofnf-docker.yml
charts/alertmanager/: values.yml
charts/prometheus/: values.yml
docker/: Dockerfile  Dockerfile-bad  Dockerfile_app
docs/additional/task1/: README.md
docs/additional/task2/: README.md
docs/additional/task3/: README.md
docs/additional/task4/: README.md
docs/task1/: README.md
docs/task2/: README.md
docs/task3/: README.md
docs/task4/: README.md
k8s/: pod.yaml
src/: app.py  main.py  settings.py
src/core/: engine.py  metadata.py  models.py
tests/: config.py  conftest.py  test_api.py
