[project]
name = ""
version = "0.1.0"
description = "Devops ITMO Lab 1 - Dockerfile and Kubernetes"
authors = [
    {name = "toofnf", email = "kaneva.tmr@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn==0.23.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.3",
    "loguru>=0.7.2",
    "pydantic-settings>=2.1.0",
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "httpx>=0.25.1",
]
load-test = [
    "locust>=2.20.0",
]
